# triad-conductor

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  Triad_Conductor_Project_Description.md  Triad_Forge_Proposal.md  conductor.py  config.example.yaml  config.yaml  pyproject.toml  telegram_bot.py  triad-start
conductor/: __init__.py  cli.py  config.py  cost_tracker.py  doctor.py  git_ops.py  logging_setup.py  prompt_renderer.py  redaction.md  redaction.py  schema_validator.py  skeleton_conductor.py  state.py  state_machine.md  stuck.py  tools.py
examples/: blocked_report.json  build_update.json  expansion_advocate.json  expansion_scope.json  expansion_technical.json  final_report.json  master_plan.json  optimization.json  proposal.json  qa.json  refined_spec.json  review.json
mcp/: devtools_server.py  devtools_server_stub.py
prompts/: arbiter.md  builder.md  optimizer.md  proposer.md  qa.md  reporter.md  reviewer.md  scope_definer.md  spec_arbiter.md  technical_analyst.md  user_advocate.md
schemas/: approved_spec.schema.json  blocked_report.schema.json  build_update.schema.json  expansion.schema.json  final_report.schema.json  intake.schema.json  master_plan.schema.json  optimization.schema.json  proposal.schema.json  qa.schema.json  refined_spec.schema.json  review.schema.json  revision_request.schema.json  scored_expansion.schema.json
tasks/: PROJECT_DESCRIPTION_TEMPLATE.md  tg-5589f5d8.md
tests/: conftest.py  test_build_phase.py  test_cli_context.py  test_cli_doctor.py  test_cli_run.py  test_config.py  test_cross_check_phase.py  test_git_ops.py  (+22 more)
(+27 files in other folders)
