[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triad-conductor"
version = "0.1.0"
description = "Multi-model coding workflow orchestrated by a non-LLM conductor"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
telegram = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["conductor*"]

[project.scripts]
conductor = "conductor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
